# TensorRT-Model-Optimizer

./: .buildinfo  .coderabbit.yaml  .dockerignore  .gitignore  .gitmodules  .markdownlint-cli2.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG-Windows.rst  CHANGELOG.rst  CLAUDE.md  CONTRIBUTING.md  LICENSE  LICENSE_HEADER  README.md  SECURITY.md  genindex.html  index.html  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  tox.ini
examples/onnx_ptq/custom_op_plugin/plugin/: CMakeLists.txt  IdentityConvPlugin.cpp  IdentityConvPlugin.h  IdentityConvPluginCreator.cpp  IdentityConvPluginCreator.h  PluginRegistration.cpp  PluginUtils.cpp  PluginUtils.h
experimental/dms/: ARCHITECTURE.md  README.md  example_inference.ipynb  pyproject.toml
experimental/dms/configs/: qwen3_1.7b.yaml  qwen3_8b.yaml
experimental/dms/dms/: __init__.py  attention.py  attention_prefill.py  cache.py  cache_paged.py  core.py  logging.py
experimental/dms/dms/training/: __init__.py  data.py  engine.py
experimental/dms/models/: __init__.py
experimental/dms/models/qwen3/: __init__.py  configuration_qwen3_dms.py  extract.py  modeling_qwen3_dms.py  train.py
experimental/dms/scripts/: evaluate.sh  train.sh  train_small.sh
experimental/dms/tests/: conftest.py  test_chunked_prefill.py  test_dms_utils.py  test_paged_cache.py  test_prefill_and_generate.py  utils.py
tools/launcher/: .gitignore  CLAUDE.md  README.md  __init__.py  core.py  launch.py  pyproject.toml  slurm_config.py
tools/launcher/common/: check_regression.py  query.py  service_utils.sh
tools/launcher/common/eagle3/: dump_offline_data.sh  dump_offline_data_hf.sh  dump_offline_data_vllm.sh  hf_ptq.sh  make_dataset.sh  offline_training.sh  train_eagle.sh  train_eagle_streaming.sh
tools/launcher/common/hf/: ptq.sh
tools/launcher/common/hf_ptq/: hf_ptq.sh
tools/launcher/common/megatron_bridge/import/: import.sh
tools/launcher/common/megatron_lm/export/: export.sh
tools/launcher/common/megatron_lm/quantize/: quantize.sh  task.py
tools/launcher/common/megatron_lm/train/: sft.sh
tools/launcher/common/smoke/: hostname.sh  nvidia_smi.sh
tools/launcher/common/specdec/: ar_eval_mtbench.sh  dflash_online_training.sh  vllm_smoke_test.sh
tools/launcher/common/specdec_bench/: quick_check.sh  run.sh  upload_to_s3.sh
tools/launcher/common/tensorrt_llm/: eval.sh  extra_llm_api_options.yaml  query.sh
tools/launcher/common/vllm/: gpqa_sample.jsonl  query.sh
tools/launcher/docs/: architecture.md  claude_code.md  configuration.md  contributing.md  testing.md
tools/launcher/examples/: EAGLE3_TRIAGE.md
tools/launcher/examples/DeepSeek/DeepSeek-V3.2/: eagle3_quick_check.yaml  hf_offline_eagle3.yaml
tools/launcher/examples/GLM/GLM-5/: eagle3_quick_check.yaml  hf_offline_eagle3.yaml
tools/launcher/examples/MiniMax/MiniMax-M2.5/: eagle3_quick_check.yaml  hf_offline_eagle3.yaml
tools/launcher/examples/MiniMax/MiniMax-M2.7-DFlash/: accelerate_fsdp2_hybrid.yaml  chat_template_train.jinja  hf_offline_dflash.yaml  hf_online_dflash.yaml  specdec_bench.yaml
tools/launcher/examples/Mistral/Ministral-3-14B/: eagle3_quick_check.yaml  hf_offline_eagle3.yaml
tools/launcher/examples/Mistral/Ministral-3-8B/: eagle3_quick_check.yaml  hf_offline_eagle3.yaml
tools/launcher/examples/MoonshotAI/Kimi-K2.5/: eagle3_quick_check.yaml  hf_offline_eagle3.yaml
tools/launcher/examples/NVIDIA/Kimi-K2.5-NVFP4/: eagle3_quick_check.yaml  hf_offline_eagle3.yaml
tools/launcher/examples/Nemotron-h/NVIDIA-Nemotron-3-Super-120B-A12B-BF16/: specdec_bench_mtp_vllm.yaml
tools/launcher/examples/OpenAI/GPT-OSS-20B/: eagle3_quick_check.yaml  hf_offline_eagle3.yaml
tools/launcher/examples/Qwen/Qwen3-0.6B/: chat_template_train.jinja  hf_offline_dflash.yaml  hf_offline_eagle3.yaml  hf_online_dflash.yaml  hf_online_eagle3.yaml
tools/launcher/examples/Qwen/Qwen3-30B-A3B/: hf_streaming_dflash_multi_node.yaml  hf_streaming_eagle3_multi_node.yaml  megatron_lm_ptq.yaml
tools/launcher/examples/Qwen/Qwen3-8B/: eagle3_quick_check.yaml  hf_eagle3_dryrun.yaml  hf_offline_eagle3.yaml  hf_offline_eagle3_ptq.yaml  hf_online_dflash.yaml  hf_online_domino.yaml  hf_online_eagle3.yaml  hf_ptq.yaml  hf_ptq_local.yaml  hf_streaming_dflash.yaml  hf_streaming_dflash_multi_node.yaml  hf_streaming_eagle3.yaml  hf_streaming_eagle3_multi_node.yaml  hf_synth.yaml  megatron_lm_ptq.yaml  megatron_lm_ptq_local.yaml  specdec_bench_dflash_vllm.yaml
tools/launcher/examples/Qwen/Qwen3.5-27B/: eagle3_quick_check.yaml  hf_offline_eagle3.yaml
tools/launcher/examples/Qwen/Qwen3.5-35B-A3B/: eagle3_quick_check.yaml  hf_offline_eagle3.yaml
tools/launcher/examples/Qwen/Qwen3.5-4B/: hf_online_dflash.yaml  query_specdec_dataset.yaml  specdec_bench.yaml  specdec_bench_dflash_vllm.yaml  specdec_bench_mtp.yaml  specdec_bench_mtp_vllm.yaml
tools/launcher/examples/Qwen/Qwen3.5-9B/: eagle3_quick_check.yaml  hf_offline_eagle3.yaml
tools/launcher/examples/StepFun/Step-3.5-Flash/: eagle3_quick_check.yaml  hf_offline_eagle3.yaml
tools/launcher/examples/gemma-4/gemma-4-E4B-it/: specdec_bench_mtp_vllm.yaml
tools/launcher/examples/google/gemma-4-E4B-it/: specdec_bench_mtp_vllm.yaml
tools/launcher/examples/meta-llama/Llama-3.2-1B-Instruct/: megatron_lm_qad.yaml
tools/launcher/examples/moonshotai/Kimi-K2.5/: hf_dflash_dryrun.yaml  hf_eagle3_dryrun.yaml  hf_offline_dflash.yaml  hf_streaming_dflash.yaml  hf_streaming_dflash_multi_node.yaml  hf_streaming_eagle3.yaml  hf_streaming_eagle3_multi_node.yaml  specdec_bench.yaml
tools/launcher/examples/openai/gpt-oss-20b/: chat_template_train.jinja  (+2 more)
tools/launcher/examples/smoke/: hostname.yaml  nvidia_smi.yaml
tools/launcher/tests/: __init__.py  conftest.py  test_core.py  test_core_extended.py  test_docker_execution.py  test_docker_launch.py  test_examples_resolve.py  test_slurm_config.py  test_slurm_executor.py  test_yaml_formats.py
tools/mcp/: .gitignore  README.md  SCOPE.md  pyproject.toml
tools/mcp/modelopt_mcp/: __init__.py  bridge.py  server.py
tools/mcp/tests/: __init__.py  test_bridge.py
(+1675 files in other folders)
