[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dms"
version = "0.1.0"
requires-python = ">=3.10,<3.14"
description = "Dynamic Memory Sparsification (DMS) for KV cache compression"
# NOTE: Run `uv lock --upgrade` in this directory to update the dependencies for vulnerability scanning.
dependencies = [
    "transformers==4.57.3",
    "datasets==4.4.2",
    "accelerate==1.4.0",
    "lm_eval[ruler]",
]

[tool.setuptools.packages.find]
include = ["dms*"]

[tool.pytest.ini_options]
testpaths = ["tests/"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore:flex_attention called without torch.compile:UserWarning",
]

[tool.uv]
managed = true
override-dependencies = ["torch; sys_platform == 'never'"]
