[project]
name = "modelopt-launcher"
version = "0.1.0"
description = "ModelOpt Launcher — submit quantization, training, and evaluation jobs to Slurm clusters"
requires-python = ">=3.10"
dependencies = [
    "nemo-run>=0.8.0",
    "pyyaml",
]

[project.scripts]
modelopt-launcher = "modelopt_launcher.launch:main"

[tool.setuptools]
packages = ["modelopt_launcher"]

[tool.setuptools.package-dir]
modelopt_launcher = "."

[tool.setuptools.package-data]
modelopt_launcher = [
    "common/**/*",
    "examples/**/*.yaml",
    "examples/**/*.jinja",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = []
